src/grammar/KappaParser.output
Terminals unused in grammar

   END
   NAME


Rules useless in parser due to conflicts

    7 instruction: %empty

   45 value_list: STRING

   49 comp_list: comp_expr

  100 string_or_pr_expr: %empty

  122 rule_expression: %empty
  124                | rule_label lhs_rhs arrow lhs_rhs


State 1 conflicts: 1 shift/reduce, 1 reduce/reduce
State 8 conflicts: 1 shift/reduce, 1 reduce/reduce
State 19 conflicts: 2 shift/reduce, 33 reduce/reduce
State 21 conflicts: 1 reduce/reduce
State 82 conflicts: 1 reduce/reduce
State 87 conflicts: 1 shift/reduce
State 99 conflicts: 6 shift/reduce
State 100 conflicts: 6 shift/reduce
State 101 conflicts: 6 shift/reduce
State 110 conflicts: 2 reduce/reduce
State 111 conflicts: 3 reduce/reduce
State 124 conflicts: 1 shift/reduce
State 127 conflicts: 1 reduce/reduce
State 130 conflicts: 1 reduce/reduce
State 132 conflicts: 1 shift/reduce, 1 reduce/reduce
State 139 conflicts: 1 reduce/reduce
State 145 conflicts: 2 shift/reduce, 31 reduce/reduce
State 146 conflicts: 28 shift/reduce
State 148 conflicts: 2 shift/reduce
State 151 conflicts: 2 reduce/reduce
State 160 conflicts: 1 reduce/reduce
State 161 conflicts: 4 reduce/reduce
State 162 conflicts: 4 reduce/reduce
State 167 conflicts: 1 shift/reduce
State 202 conflicts: 1 reduce/reduce
State 232 conflicts: 3 reduce/reduce
State 237 conflicts: 1 reduce/reduce
State 306 conflicts: 28 shift/reduce


Grammar

    0 $accept: statements $end

    1 statements: %empty
    2           | statements statement NEWLINE

    3 statement: %empty
    4          | rule_expression
    5          | instruction
    6          | error

    7 instruction: %empty
    8            | COMPARTMENT comp_expr alg_expr
    9            | C_LINK LABEL comp_expr arrow comp_expr ATD constant
   10            | TRANSPORT join LABEL mixture AT alg_expr
   11            | USE comp_list
   12            | SIGNATURE agent_expression
   13            | TOKEN ID
   14            | SIGNATURE error
   15            | INIT init_declaration
   16            | INIT error
   17            | LET variable_declaration
   18            | OBS variable_declaration
   19            | PLOT alg_expr
   20            | PLOT error
   21            | PERT perturbation_declaration
   22            | PERT REPEAT perturbation_declaration UNTIL bool_expr
   23            | CONFIG STRING value_list
   24            | PERT bool_expr DO effect_list UNTIL bool_expr

   25 init_declaration: %empty
   26                 | multiple non_empty_mixture
   27                 | ID LAR multiple
   28                 | ID OP_CUR init_declaration CL_CUR

   29 join: %empty
   30     | JOIN
   31     | FREE

   32 comp_expr: LABEL dimension where_expr

   33 dimension: %empty
   34          | OP_BRA index_expr CL_BRA dimension

   35 index_expr: INT
   36           | ID
   37           | OP_PAR index_expr CL_PAR
   38           | index_expr MULT index_expr
   39           | index_expr PLUS index_expr
   40           | index_expr DIV index_expr
   41           | index_expr MINUS index_expr
   42           | index_expr POW index_expr
   43           | index_expr MODULO index_expr

   44 value_list: %empty
   45           | STRING
   46           | STRING value_list

   47 comp_list: %empty
   48          | "$ALL"
   49          | comp_expr
   50          | comp_expr comp_list
   51          | comp_expr COMMA comp_list

   52 where_expr: %empty
   53           | OP_CUR bool_expr CL_CUR

   54 perturbation_declaration: %empty
   55                         | OP_PAR perturbation_declaration CL_PAR
   56                         | bool_expr DO effect_list
   57                         | bool_expr SET effect_list

   58 effect_list: %empty
   59            | OP_PAR effect_list CL_PAR
   60            | effect
   61            | effect SEMICOLON effect_list

   62 effect: %empty
   63       | LABEL ASSIGN alg_expr
   64       | ASSIGN2 LABEL alg_expr
   65       | TRACK LABEL boolean
   66       | FLUX opt_string boolean
   67       | INTRO multiple_mixture
   68       | INTRO error
   69       | DELETE multiple_mixture
   70       | DELETE error
   71       | ID LAR alg_expr
   72       | SNAPSHOT opt_string
   73       | STOP opt_string
   74       | PRINT SMALLER print_expr GREATER
   75       | PRINTF string_or_pr_expr SMALLER print_expr GREATER

   76 print_expr: %empty
   77           | STRING
   78           | alg_expr
   79           | STRING DOT print_expr
   80           | alg_expr DOT print_expr

   81 boolean: %empty
   82        | TRUE
   83        | FALSE

   84 variable_declaration: LABEL non_empty_mixture
   85                     | LABEL alg_expr
   86                     | LABEL error

   87 bool_expr: %empty
   88          | OP_PAR bool_expr CL_PAR
   89          | bool_expr AND bool_expr
   90          | bool_expr OR bool_expr
   91          | alg_expr GREATER alg_expr
   92          | alg_expr SMALLER alg_expr
   93          | alg_expr EQUAL alg_expr
   94          | alg_expr DIFF alg_expr
   95          | TRUE
   96          | FALSE

   97 opt_string: %empty
   98           | STRING
   99           | SMALLER print_expr GREATER

  100 string_or_pr_expr: %empty
  101                  | STRING
  102                  | SMALLER print_expr GREATER

  103 multiple: %empty
  104         | INT
  105         | FLOAT
  106         | LABEL

  107 rule_label: %empty
  108           | LABEL

  109 lhs_rhs: mixture token_expr

  110 token_expr: %empty
  111           | PIPE sum_token
  112           | PIPE error

  113 sum_token: %empty
  114          | OP_PAR sum_token CL_PAR
  115          | alg_expr TYPE ID
  116          | alg_expr TYPE ID PLUS sum_token

  117 mixture: %empty
  118        | non_empty_mixture

  119 rate_sep: %empty
  120         | AT
  121         | FIX

  122 rule_expression: %empty
  123                | rule_label lhs_rhs arrow lhs_rhs rate_sep rate
  124                | rule_label lhs_rhs arrow lhs_rhs

  125 arrow: %empty
  126      | KAPPA_RAR
  127      | KAPPA_LRAR

  128 constant: INFINITY
  129         | FLOAT
  130         | INT
  131         | EMAX
  132         | TMAX

  133 variable: PIPE ID PIPE
  134         | LABEL
  135         | TIME
  136         | EVENT
  137         | NULL_EVENT
  138         | PROD_EVENT
  139         | ACTIVITY
  140         | CPUTIME

  141 alg_expr: OP_PAR alg_expr CL_PAR
  142         | constant
  143         | variable
  144         | ID
  145         | alg_expr MULT alg_expr
  146         | alg_expr PLUS alg_expr
  147         | alg_expr DIV alg_expr
  148         | alg_expr MINUS alg_expr
  149         | alg_expr POW alg_expr
  150         | alg_expr MODULO alg_expr
  151         | MAX alg_expr alg_expr
  152         | MIN alg_expr alg_expr
  153         | EXPONENT alg_expr
  154         | SINUS alg_expr
  155         | COSINUS alg_expr
  156         | TAN alg_expr
  157         | ABS alg_expr
  158         | SQRT alg_expr
  159         | LOG alg_expr
  160         | ATAN alg_expr
  161         | COIN alg_expr
  162         | RAND_N alg_expr
  163         | RAND_1

  164 rate: %empty
  165     | alg_expr OP_PAR alg_with_radius CL_PAR
  166     | alg_expr
  167     | alg_expr COMMA alg_expr

  168 alg_with_radius: %empty
  169                | alg_expr
  170                | alg_expr TYPE alg_expr

  171 multiple_mixture: %empty
  172                 | alg_expr non_empty_mixture
  173                 | non_empty_mixture

  174 non_empty_mixture: %empty
  175                  | OP_PAR non_empty_mixture CL_PAR
  176                  | agent_expression COMMA non_empty_mixture
  177                  | agent_expression

  178 agent_expression: ID OP_PAR interface_expression CL_PAR
  179                 | ID error

  180 interface_expression: %empty
  181                     | ne_interface_expression

  182 ne_interface_expression: %empty
  183                        | port_expression COMMA ne_interface_expression
  184                        | port_expression

  185 port_expression: %empty
  186                | ID internal_state link_state

  187 internal_state: %empty
  188               | KAPPA_MRK internal_state
  189               | error

  190 link_state: %empty
  191           | KAPPA_LNK INT
  192           | KAPPA_LNK KAPPA_SEMI
  193           | KAPPA_LNK ID DOT ID
  194           | KAPPA_WLD
  195           | KAPPA_LNK error


Terminals, with rules where they appear

$end (0) 0
error (256) 6 14 16 20 68 70 86 112 179 189 195
END (258)
NEWLINE (259) 2
SEMICOLON (260) 61
AT (261) 10 120
ATD (262) 9
FIX (263) 121
OP_PAR (264) 37 55 59 88 114 141 165 175 178
CL_PAR (265) 37 55 59 88 114 141 165 175 178
OP_BRA (266) 34
CL_BRA (267) 34
COMMA (268) 51 167 176 183
DOT (269) 79 80 193
TYPE (270) 115 116 170
LAR (271) 27 71
OP_CUR (272) 28 53
CL_CUR (273) 28 53
JOIN (274) 30
FREE (275) 31
LOG (276) 159
PLUS (277) 39 116 146
MULT (278) 38 145
MINUS (279) 41 148
AND (280) 89
OR (281) 90
GREATER (282) 74 75 91 99 102
SMALLER (283) 74 75 92 99 102
EQUAL (284) 93
PERT (285) 21 22 24
INTRO (286) 67 68
DELETE (287) 69 70
DO (288) 24 56
SET (289) 57
UNTIL (290) 22 24
TRUE (291) 82 95
FALSE (292) 83 96
OBS (293) 18
KAPPA_RAR (294) 126
TRACK (295) 65
CPUTIME (296) 140
CONFIG (297) 23
REPEAT (298) 22
DIFF (299) 94
KAPPA_WLD (300) 194
KAPPA_SEMI (301) 192
SIGNATURE (302) 12 14
INFINITY (303) 128
TIME (304) 135
EVENT (305) 136
ACTIVITY (306) 139
NULL_EVENT (307) 137
PROD_EVENT (308) 138
INIT (309) 15 16
LET (310) 17
DIV (311) 40 147
PLOT (312) 19 20
SINUS (313) 154
COSINUS (314) 155
TAN (315) 156
ATAN (316) 160
COIN (317) 161
RAND_N (318) 162
SQRT (319) 158
EXPONENT (320) 153
POW (321) 42 149
ABS (322) 157
MODULO (323) 43 150
EMAX (324) 131
TMAX (325) 132
RAND_1 (326) 163
FLUX (327) 66
ASSIGN (328) 63
ASSIGN2 (329) 64
TOKEN (330) 13
KAPPA_LNK (331) 191 192 193 195
PIPE (332) 111 112 133
KAPPA_LRAR (333) 127
PRINT (334) 74
PRINTF (335) 75
MAX (336) 151
MIN (337) 152
INT (338) 35 104 130 191
ID (339) 13 27 28 36 71 115 116 133 144 178 179 186 193
LABEL (340) 9 10 32 63 64 65 84 85 86 106 108 134
KAPPA_MRK (341) 188
NAME (342)
FLOAT (343) 105 129
STRING (344) 23 45 46 77 79 98 101
STOP (345) 73
SNAPSHOT (346) 72
COMPARTMENT (347) 8
C_LINK (348) 9
TRANSPORT (349) 10
USE (350) 11
"$ALL" (351) 48


Nonterminals, with rules where they appear

$accept (97)
    on left: 0
statements (98)
    on left: 1 2, on right: 0 2
statement (99)
    on left: 3 4 5 6, on right: 2
instruction (100)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right:
    5
init_declaration (101)
    on left: 25 26 27 28, on right: 15 28
join (102)
    on left: 29 30 31, on right: 10
comp_expr (103)
    on left: 32, on right: 8 9 49 50 51
dimension (104)
    on left: 33 34, on right: 32 34
index_expr (105)
    on left: 35 36 37 38 39 40 41 42 43, on right: 34 37 38 39 40 41
    42 43
value_list (106)
    on left: 44 45 46, on right: 23 46
comp_list (107)
    on left: 47 48 49 50 51, on right: 11 50 51
where_expr (108)
    on left: 52 53, on right: 32
perturbation_declaration (109)
    on left: 54 55 56 57, on right: 21 22 55
effect_list (110)
    on left: 58 59 60 61, on right: 24 56 57 59 61
effect (111)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right: 60
    61
print_expr (112)
    on left: 76 77 78 79 80, on right: 74 75 79 80 99 102
boolean (113)
    on left: 81 82 83, on right: 65 66
variable_declaration (114)
    on left: 84 85 86, on right: 17 18
bool_expr (115)
    on left: 87 88 89 90 91 92 93 94 95 96, on right: 22 24 53 56 57
    88 89 90
opt_string (116)
    on left: 97 98 99, on right: 66 72 73
string_or_pr_expr (117)
    on left: 100 101 102, on right: 75
multiple (118)
    on left: 103 104 105 106, on right: 26 27
rule_label (119)
    on left: 107 108, on right: 123 124
lhs_rhs (120)
    on left: 109, on right: 123 124
token_expr (121)
    on left: 110 111 112, on right: 109
sum_token (122)
    on left: 113 114 115 116, on right: 111 114 116
mixture (123)
    on left: 117 118, on right: 10 109
rate_sep (124)
    on left: 119 120 121, on right: 123
rule_expression (125)
    on left: 122 123 124, on right: 4
arrow (126)
    on left: 125 126 127, on right: 9 123 124
constant (127)
    on left: 128 129 130 131 132, on right: 9 142
variable (128)
    on left: 133 134 135 136 137 138 139 140, on right: 143
alg_expr (129)
    on left: 141 142 143 144 145 146 147 148 149 150 151 152 153 154
    155 156 157 158 159 160 161 162 163, on right: 8 10 19 63 64 71
    78 80 85 91 92 93 94 115 116 141 145 146 147 148 149 150 151 152
    153 154 155 156 157 158 159 160 161 162 165 166 167 169 170 172
rate (130)
    on left: 164 165 166 167, on right: 123
alg_with_radius (131)
    on left: 168 169 170, on right: 165
multiple_mixture (132)
    on left: 171 172 173, on right: 67 69
non_empty_mixture (133)
    on left: 174 175 176 177, on right: 26 84 118 172 173 175 176
agent_expression (134)
    on left: 178 179, on right: 12 176 177
interface_expression (135)
    on left: 180 181, on right: 178
ne_interface_expression (136)
    on left: 182 183 184, on right: 181 183
port_expression (137)
    on left: 185 186, on right: 183 184
internal_state (138)
    on left: 187 188 189, on right: 186 188
link_state (139)
    on left: 190 191 192 193 194 195, on right: 186


State 0

    0 $accept: . statements $end

    $default  reduce using rule 1 (statements)

    statements  go to state 1


State 1

    0 $accept: statements . $end
    2 statements: statements . statement NEWLINE

    $end         shift, and go to state 2
    error        shift, and go to state 3
    PERT         shift, and go to state 4
    OBS          shift, and go to state 5
    CONFIG       shift, and go to state 6
    SIGNATURE    shift, and go to state 7
    INIT         shift, and go to state 8
    LET          shift, and go to state 9
    PLOT         shift, and go to state 10
    TOKEN        shift, and go to state 11
    LABEL        shift, and go to state 12
    COMPARTMENT  shift, and go to state 13
    C_LINK       shift, and go to state 14
    TRANSPORT    shift, and go to state 15
    USE          shift, and go to state 16

    NEWLINE     reduce using rule 3 (statement)
    NEWLINE     [reduce using rule 7 (instruction)]
    NEWLINE     [reduce using rule 107 (rule_label)]
    NEWLINE     [reduce using rule 122 (rule_expression)]
    AT          reduce using rule 107 (rule_label)
    FIX         reduce using rule 107 (rule_label)
    OP_PAR      reduce using rule 107 (rule_label)
    LOG         reduce using rule 107 (rule_label)
    KAPPA_RAR   reduce using rule 107 (rule_label)
    CPUTIME     reduce using rule 107 (rule_label)
    INFINITY    reduce using rule 107 (rule_label)
    TIME        reduce using rule 107 (rule_label)
    EVENT       reduce using rule 107 (rule_label)
    ACTIVITY    reduce using rule 107 (rule_label)
    NULL_EVENT  reduce using rule 107 (rule_label)
    PROD_EVENT  reduce using rule 107 (rule_label)
    SINUS       reduce using rule 107 (rule_label)
    COSINUS     reduce using rule 107 (rule_label)
    TAN         reduce using rule 107 (rule_label)
    ATAN        reduce using rule 107 (rule_label)
    COIN        reduce using rule 107 (rule_label)
    RAND_N      reduce using rule 107 (rule_label)
    SQRT        reduce using rule 107 (rule_label)
    EXPONENT    reduce using rule 107 (rule_label)
    ABS         reduce using rule 107 (rule_label)
    EMAX        reduce using rule 107 (rule_label)
    TMAX        reduce using rule 107 (rule_label)
    RAND_1      reduce using rule 107 (rule_label)
    PIPE        reduce using rule 107 (rule_label)
    KAPPA_LRAR  reduce using rule 107 (rule_label)
    MAX         reduce using rule 107 (rule_label)
    MIN         reduce using rule 107 (rule_label)
    INT         reduce using rule 107 (rule_label)
    ID          reduce using rule 107 (rule_label)
    LABEL       [reduce using rule 107 (rule_label)]
    FLOAT       reduce using rule 107 (rule_label)

    statement        go to state 17
    instruction      go to state 18
    rule_label       go to state 19
    rule_expression  go to state 20


State 2

    0 $accept: statements $end .

    $default  accept


State 3

    6 statement: error .

    $default  reduce using rule 6 (statement)


State 4

   21 instruction: PERT . perturbation_declaration
   22            | PERT . REPEAT perturbation_declaration UNTIL bool_expr
   24            | PERT . bool_expr DO effect_list UNTIL bool_expr

    OP_PAR      shift, and go to state 21
    LOG         shift, and go to state 22
    TRUE        shift, and go to state 23
    FALSE       shift, and go to state 24
    CPUTIME     shift, and go to state 25
    REPEAT      shift, and go to state 26
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    NEWLINE   reduce using rule 54 (perturbation_declaration)
    $default  reduce using rule 87 (bool_expr)

    perturbation_declaration  go to state 52
    bool_expr                 go to state 53
    constant                  go to state 54
    variable                  go to state 55
    alg_expr                  go to state 56


State 5

   18 instruction: OBS . variable_declaration

    LABEL  shift, and go to state 57

    variable_declaration  go to state 58


State 6

   23 instruction: CONFIG . STRING value_list

    STRING  shift, and go to state 59


State 7

   12 instruction: SIGNATURE . agent_expression
   14            | SIGNATURE . error

    error  shift, and go to state 60
    ID     shift, and go to state 61

    agent_expression  go to state 62


State 8

   15 instruction: INIT . init_declaration
   16            | INIT . error

    error  shift, and go to state 63
    INT    shift, and go to state 64
    ID     shift, and go to state 65
    LABEL  shift, and go to state 66
    FLOAT  shift, and go to state 67

    NEWLINE  reduce using rule 25 (init_declaration)
    NEWLINE  [reduce using rule 103 (multiple)]
    OP_PAR   reduce using rule 103 (multiple)
    ID       [reduce using rule 103 (multiple)]

    init_declaration  go to state 68
    multiple          go to state 69


State 9

   17 instruction: LET . variable_declaration

    LABEL  shift, and go to state 57

    variable_declaration  go to state 70


State 10

   19 instruction: PLOT . alg_expr
   20            | PLOT . error

    error       shift, and go to state 71
    OP_PAR      shift, and go to state 72
    LOG         shift, and go to state 22
    CPUTIME     shift, and go to state 25
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    constant  go to state 54
    variable  go to state 55
    alg_expr  go to state 73


State 11

   13 instruction: TOKEN . ID

    ID  shift, and go to state 74


State 12

  108 rule_label: LABEL .

    $default  reduce using rule 108 (rule_label)


State 13

    8 instruction: COMPARTMENT . comp_expr alg_expr

    LABEL  shift, and go to state 75

    comp_expr  go to state 76


State 14

    9 instruction: C_LINK . LABEL comp_expr arrow comp_expr ATD constant

    LABEL  shift, and go to state 77


State 15

   10 instruction: TRANSPORT . join LABEL mixture AT alg_expr

    JOIN  shift, and go to state 78
    FREE  shift, and go to state 79

    $default  reduce using rule 29 (join)

    join  go to state 80


State 16

   11 instruction: USE . comp_list

    LABEL   shift, and go to state 75
    "$ALL"  shift, and go to state 81

    $default  reduce using rule 47 (comp_list)

    comp_expr  go to state 82
    comp_list  go to state 83


State 17

    2 statements: statements statement . NEWLINE

    NEWLINE  shift, and go to state 84


State 18

    5 statement: instruction .

    $default  reduce using rule 5 (statement)


State 19

  123 rule_expression: rule_label . lhs_rhs arrow lhs_rhs rate_sep rate
  124                | rule_label . lhs_rhs arrow lhs_rhs

    OP_PAR  shift, and go to state 85
    ID      shift, and go to state 61

    NEWLINE     reduce using rule 117 (mixture)
    NEWLINE     [reduce using rule 174 (non_empty_mixture)]
    AT          reduce using rule 117 (mixture)
    AT          [reduce using rule 174 (non_empty_mixture)]
    FIX         reduce using rule 117 (mixture)
    FIX         [reduce using rule 174 (non_empty_mixture)]
    OP_PAR      [reduce using rule 117 (mixture)]
    OP_PAR      [reduce using rule 174 (non_empty_mixture)]
    LOG         reduce using rule 117 (mixture)
    LOG         [reduce using rule 174 (non_empty_mixture)]
    KAPPA_RAR   reduce using rule 117 (mixture)
    KAPPA_RAR   [reduce using rule 174 (non_empty_mixture)]
    CPUTIME     reduce using rule 117 (mixture)
    CPUTIME     [reduce using rule 174 (non_empty_mixture)]
    INFINITY    reduce using rule 117 (mixture)
    INFINITY    [reduce using rule 174 (non_empty_mixture)]
    TIME        reduce using rule 117 (mixture)
    TIME        [reduce using rule 174 (non_empty_mixture)]
    EVENT       reduce using rule 117 (mixture)
    EVENT       [reduce using rule 174 (non_empty_mixture)]
    ACTIVITY    reduce using rule 117 (mixture)
    ACTIVITY    [reduce using rule 174 (non_empty_mixture)]
    NULL_EVENT  reduce using rule 117 (mixture)
    NULL_EVENT  [reduce using rule 174 (non_empty_mixture)]
    PROD_EVENT  reduce using rule 117 (mixture)
    PROD_EVENT  [reduce using rule 174 (non_empty_mixture)]
    SINUS       reduce using rule 117 (mixture)
    SINUS       [reduce using rule 174 (non_empty_mixture)]
    COSINUS     reduce using rule 117 (mixture)
    COSINUS     [reduce using rule 174 (non_empty_mixture)]
    TAN         reduce using rule 117 (mixture)
    TAN         [reduce using rule 174 (non_empty_mixture)]
    ATAN        reduce using rule 117 (mixture)
    ATAN        [reduce using rule 174 (non_empty_mixture)]
    COIN        reduce using rule 117 (mixture)
    COIN        [reduce using rule 174 (non_empty_mixture)]
    RAND_N      reduce using rule 117 (mixture)
    RAND_N      [reduce using rule 174 (non_empty_mixture)]
    SQRT        reduce using rule 117 (mixture)
    SQRT        [reduce using rule 174 (non_empty_mixture)]
    EXPONENT    reduce using rule 117 (mixture)
    EXPONENT    [reduce using rule 174 (non_empty_mixture)]
    ABS         reduce using rule 117 (mixture)
    ABS         [reduce using rule 174 (non_empty_mixture)]
    EMAX        reduce using rule 117 (mixture)
    EMAX        [reduce using rule 174 (non_empty_mixture)]
    TMAX        reduce using rule 117 (mixture)
    TMAX        [reduce using rule 174 (non_empty_mixture)]
    RAND_1      reduce using rule 117 (mixture)
    RAND_1      [reduce using rule 174 (non_empty_mixture)]
    PIPE        reduce using rule 117 (mixture)
    PIPE        [reduce using rule 174 (non_empty_mixture)]
    KAPPA_LRAR  reduce using rule 117 (mixture)
    KAPPA_LRAR  [reduce using rule 174 (non_empty_mixture)]
    MAX         reduce using rule 117 (mixture)
    MAX         [reduce using rule 174 (non_empty_mixture)]
    MIN         reduce using rule 117 (mixture)
    MIN         [reduce using rule 174 (non_empty_mixture)]
    INT         reduce using rule 117 (mixture)
    INT         [reduce using rule 174 (non_empty_mixture)]
    ID          [reduce using rule 117 (mixture)]
    ID          [reduce using rule 174 (non_empty_mixture)]
    LABEL       reduce using rule 117 (mixture)
    LABEL       [reduce using rule 174 (non_empty_mixture)]
    FLOAT       reduce using rule 117 (mixture)
    FLOAT       [reduce using rule 174 (non_empty_mixture)]
    $default    reduce using rule 117 (mixture)

    lhs_rhs            go to state 86
    mixture            go to state 87
    non_empty_mixture  go to state 88
    agent_expression   go to state 89


State 20

    4 statement: rule_expression .

    $default  reduce using rule 4 (statement)


State 21

   55 perturbation_declaration: OP_PAR . perturbation_declaration CL_PAR
   88 bool_expr: OP_PAR . bool_expr CL_PAR
  141 alg_expr: OP_PAR . alg_expr CL_PAR

    OP_PAR      shift, and go to state 21
    LOG         shift, and go to state 22
    TRUE        shift, and go to state 23
    FALSE       shift, and go to state 24
    CPUTIME     shift, and go to state 25
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    CL_PAR    reduce using rule 54 (perturbation_declaration)
    CL_PAR    [reduce using rule 87 (bool_expr)]
    $default  reduce using rule 87 (bool_expr)

    perturbation_declaration  go to state 90
    bool_expr                 go to state 91
    constant                  go to state 54
    variable                  go to state 55
    alg_expr                  go to state 92


State 22

  159 alg_expr: LOG . alg_expr

    OP_PAR      shift, and go to state 72
    LOG         shift, and go to state 22
    CPUTIME     shift, and go to state 25
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    constant  go to state 54
    variable  go to state 55
    alg_expr  go to state 93


State 23

   95 bool_expr: TRUE .

    $default  reduce using rule 95 (bool_expr)


State 24

   96 bool_expr: FALSE .

    $default  reduce using rule 96 (bool_expr)


State 25

  140 variable: CPUTIME .

    $default  reduce using rule 140 (variable)


State 26

   22 instruction: PERT REPEAT . perturbation_declaration UNTIL bool_expr

    OP_PAR      shift, and go to state 21
    LOG         shift, and go to state 22
    TRUE        shift, and go to state 23
    FALSE       shift, and go to state 24
    CPUTIME     shift, and go to state 25
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    UNTIL     reduce using rule 54 (perturbation_declaration)
    $default  reduce using rule 87 (bool_expr)

    perturbation_declaration  go to state 94
    bool_expr                 go to state 95
    constant                  go to state 54
    variable                  go to state 55
    alg_expr                  go to state 56


State 27

  128 constant: INFINITY .

    $default  reduce using rule 128 (constant)


State 28

  135 variable: TIME .

    $default  reduce using rule 135 (variable)


State 29

  136 variable: EVENT .

    $default  reduce using rule 136 (variable)


State 30

  139 variable: ACTIVITY .

    $default  reduce using rule 139 (variable)


State 31

  137 variable: NULL_EVENT .

    $default  reduce using rule 137 (variable)


State 32

  138 variable: PROD_EVENT .

    $default  reduce using rule 138 (variable)


State 33

  154 alg_expr: SINUS . alg_expr

    OP_PAR      shift, and go to state 72
    LOG         shift, and go to state 22
    CPUTIME     shift, and go to state 25
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    constant  go to state 54
    variable  go to state 55
    alg_expr  go to state 96


State 34

  155 alg_expr: COSINUS . alg_expr

    OP_PAR      shift, and go to state 72
    LOG         shift, and go to state 22
    CPUTIME     shift, and go to state 25
    INFINITY    shift, and go to state 27
    TIME        shift, and go to state 28
    EVENT       shift, and go to state 29
    ACTIVITY    shift, and go to state 30
    NULL_EVENT  shift, and go to state 31
    PROD_EVENT  shift, and go to state 32
    SINUS       shift, and go to state 33
    COSINUS     shift, and go to state 34
    TAN         shift, and go to state 35
    ATAN        shift, and go to state 36
    COIN        shift, and go to state 37
    RAND_N      shift, and go to state 38
    SQRT        shift, and go to state 39
    EXPONENT    shift, and go to state 40
    ABS         shift, and go to state 41
    EMAX        shift, and go to state 42
    TMAX        shift, and go to state 43
    RAND_1      shift, and go to state 44
    PIPE        shift, and go to state 45
    MAX         shift, and go to state 46
    MIN         shift, and go to state 47
    INT         shift, and go to state 48
    ID          shift, and go to state 49
    LABEL       shift, and go to state 50
    FLOAT       shift, and go to state 51

    constant  go to state 54
    variable  go to state 55
    alg_expr  go to state 97


State 35

  156 alg_expr: TAN . alg_expr
